test/tests/compiler/6_statements_and_conditional_expressions/valid/rh_assignment.plx
pub fn main(none) i32 {
    flag: i32 = 1
    a: i32 = 0
    ? flag then a = 1 else (a = 0)
    return a
}
