test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/parenthesized_label.plx
pub fn main(none) i32 {
    jump (a)
    label a
    return 0
}
